# divoom-times-gate

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  shell.nix
divoom_timesgate/: __init__.py  device.py  discovery.py  exceptions.py  models.py
doc/: readme.md  t  text_example.json
docs/: API.md  API_REFERENCE.md  CHANGELOG.md  DIVOOM_API_SPEC.md  PANEL_CONTROL.md  QUICK_REFERENCE.md  README.md
docs/examples/: custom_clock.py  display_list_example.json  game_scoreboard.py  notification_system.py  weather_dashboard.py
examples/: display_list_demo.py  multi_panel_demo.py  quick_demo.py
php-divoom-timesgate/: README.md  composer.json
php-divoom-timesgate/src/: TimesGateDevice.php  TimesGateException.php
src/: brightness.py  display.py  divoom_times_gate.py  weather.py
tests/: test_auto_discovery.py  test_brightness.py  test_brightness_simple.py  test_device.py  test_panel_channels.py  test_panel_identification.py  test_panel_layout.py
tests/experiments/: .gitignore  README.md
