[tool.poetry]
name = "divoom-times-gate"
version = "0.1.0"
description = ""
authors = ["Benjamin Smith <polynomial@gmail.com>"]
readme = "README.md"
packages = [{include = "divoom_times_gate"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
