[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divoom-timesgate"
version = "1.0.0"
authors = [
    {name = "Divoom Times Gate Community", email = "developer@divoom.com"},
]
description = "Python library for controlling Divoom Times Gate devices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["divoom", "timesgate", "times-gate", "iot", "smart-clock", "led-display"]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/divoom-timesgate/divoom-times-gate"
Documentation = "https://github.com/divoom-timesgate/divoom-times-gate/tree/main/docs"
Repository = "https://github.com/divoom-timesgate/divoom-times-gate"
"Bug Tracker" = "https://github.com/divoom-timesgate/divoom-times-gate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["divoom_timesgate*"]
exclude = ["tests*", "docs*", "examples*"]
